Create stepper component with projected content.

--- a/src/app/components/stepper/stepper.component.html
+++ b/src/app/components/stepper/stepper.component.html
@@ -1,1 +1,16 @@
-<p>stepper works!</p>
+<div class="stepper-wrapper">
+    <ng-content>
+
+    </ng-content>
+    <div class="action-buttons">
+        <button>
+            Back
+        </button>
+        <button>
+            Next
+        </button>
+        <button>
+            Start
+        </button>
+    </div>
+</div>
