Query inner Content children to count Steps inside stepper component.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,13 @@
     <fw-step [header]="'Test'">
         Step Body
     </fw-step>
+    <fw-step [header]="'Test'">
+        Step Body
+    </fw-step>
+    <fw-step [header]="'Test'">
+        Step Body
+    </fw-step>
+    <fw-step [header]="'Test'">
+        Step Body
+    </fw-step>
 </fw-stepper>
