--- a/src/app/components/stepper/stepper.component.html
+++ b/src/app/components/stepper/stepper.component.html
@@ -1,8 +1,6 @@
 <div class="stepper-wrapper">
     {{ steps?.length }} - {{ currentIndex }}
-    <ng-content>
-
-    </ng-content>
+    <ng-container #stepContainer></ng-container>
     <div class="action-buttons">
         <button type="button" (click)="prev()" *ngIf="backButtonEnabled">
             Back
