Added components 1. Summary component 2. User details component 3. Error component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
-<fw-stepper>
-    <fw-step [header]="'Test 1'">
-        <fw-welcome></fw-welcome>
-    </fw-step>
-    <fw-step [header]="'Test 2'">
-        Step Body 2
-    </fw-step>
-    <fw-step [header]="'Test 3'">
-        Step Body 3
-    </fw-step>
-    <fw-step [header]="'Test 4'">
-        Step Body 4
-    </fw-step>
-</fw-stepper>
+<div class="container">
+    <div class="stepper-content">
+        <fw-stepper>
+            <fw-step [header]="'Test 1'">
+                <fw-welcome></fw-welcome>
+            </fw-step>
+            <fw-step [header]="'Test 2'">
+                Step Body 2
+            </fw-step>
+            <fw-step [header]="'Test 3'">
+                Step Body 3
+            </fw-step>
+            <fw-step [header]="'Test 4'">
+                Step Body 4
+            </fw-step>
+        </fw-stepper>
+    </div>
+</div>
