Added view contents for summary and user-details-form.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,14 @@
             <fw-step [header]="'Test 1'">
                 <fw-welcome></fw-welcome>
             </fw-step>
-            <fw-step [header]="'Test 2'">
-                Step Body 2
+            <fw-step [header]="'User Details'">
+                <fw-user-details-form></fw-user-details-form>
             </fw-step>
-            <fw-step [header]="'Test 3'">
-                Step Body 3
+            <fw-step [header]="'Summary'">
+                <fw-summary></fw-summary>
             </fw-step>
-            <fw-step [header]="'Test 4'">
-                Step Body 4
+            <fw-step [header]="'Error'">
+                <fw-error></fw-error>
             </fw-step>
         </fw-stepper>
     </div>
