--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,1 +1,10 @@
-<p>summary works!</p>
+<div class="summary">
+    <h3>Summary</h3>
+    <div class="user-details">
+        <div>Name: John</div>
+        <div>Age: 50</div>
+        <div>Where do you live: Hong Kong</div>
+        <div>Package: Standard</div>
+        <div>Premium: 500HKD</div>
+    </div>
+</div>
