Added premium calculation service.

--- a/src/app/components/user-details-form/user-details-form.component.html
+++ b/src/app/components/user-details-form/user-details-form.component.html
@@ -1,22 +1,28 @@
 <div [formGroup]="userDetailsForm">
-    <label>
-        Name
+    <div class="form-control">
+        <label>
+            Name
+        </label>
         <input type="text" formControlName="name" />
-    </label>
-    <label>
-        Age
+    </div>
+    <div class="form-control">
+        <label>
+            Age
+        </label>
         <input type="text" formControlName="age" />
-    </label>
-    <label>
-        Where do you live
+    </div>
+    <div class="form-control">
+        <label>
+            Where do you live
+        </label>
         <select formControlName="location">
-            <option>Please select country</option>
-            <option *ngFor="let location of locations">
+            <option value="">Please select country</option>
+            <option *ngFor="let location of locations" [value]="location.id">
                 {{ location.name }}
             </option>
         </select>
-    </label>
-    <div class="">
+    </div>
+    <div class="form-control">
         <label *ngFor="let package of packages">
             {{ package.description }}
             <input type="checkbox" [value]="package.id" formControlName="package" />
@@ -25,4 +31,6 @@
     <div>
         <b>Your premium is: 500HKD</b>
     </div>
+
+    {{ userDetailsForm.value | json }}
 </div>
