--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,1 @@
-<div class="container">
-    <div class="stepper-content">
-        <fw-stepper>
-            <fw-step [header]="'Test 1'">
-                <fw-welcome></fw-welcome>
-            </fw-step>
-            <fw-step [header]="'User Details'">
-                <fw-user-details-form></fw-user-details-form>
-            </fw-step>
-            <fw-step [header]="'Summary'">
-                <fw-summary></fw-summary>
-            </fw-step>
-            <fw-step [header]="'Error'">
-                <fw-error></fw-error>
-            </fw-step>
-        </fw-stepper>
-    </div>
-</div>
+<router-outlet></router-outlet>
