1. Added stepForm ifff parent is Step COmponent 2. step getter. 3. onNext, onPrev, onFinish events added.

--- a/src/app/components/user-wizard/user-wizard.component.html
+++ b/src/app/components/user-wizard/user-wizard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="stepper-content">
-        <fw-stepper>
+        <fw-stepper (onNext)="onNext()" (onFinish)="onFinish()">
             <fw-step [header]="'Test 1'">
                 <fw-welcome></fw-welcome>
             </fw-step>
