1. Common form control CSS 2. Wizard in the middle of the screen.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,4 @@
 :host {
-    height: inherit;
-    .container {
-        align-items: center;
-        display: flex;
-        height: inherit;
-        justify-content: center;
-        min-height: 500px;
-    }
+    height: 100%;
+    display: block;
 }
