--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,5 +1,6 @@
 <div class="summary">
     <h3>Summary</h3>
+    <h4>John,</h4>
     <div class="user-details">
         <div>Name: John</div>
         <div>Age: 50</div>
