Resolved all linter warnings.

--- a/src/app/components/user-wizard/user-wizard.component.html
+++ b/src/app/components/user-wizard/user-wizard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="stepper-content">
-        <fw-stepper (onNext)="onNext($event)" (onFinish)="onFinish()">
+        <fw-stepper (nextClick)="nextClick($event)" (winzardFinish)="winzardFinish()">
             <fw-step [header]="'Hello There!'">
                 <fw-welcome></fw-welcome>
             </fw-step>
