1. Added error Checker on step level 2. Userdetails name added on page.

--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,6 +1,6 @@
 <div class="summary" *ngIf="userDetails">
     <h3>Summary</h3>
-    <h4>John,</h4>
+    <h4>{{userDetails.name}},</h4>
     <div class="user-details">
         <div>Name: {{userDetails.name}}</div>
         <div>Age: {{userDetails.age}}50</div>
