--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,1 +1,5 @@
-<p>error works!</p>
+<div class="error-wrapper">
+    <div>Ooops</div>
+    <div>Your age is over our accepted limit.</div>
+    <div>We are sorry but we cannot insure you now</div>
+</div>
