1. removed !isErrorPage variable 2. called updateButtons after `renderErrorState` functions.

--- a/src/app/components/stepper/stepper.component.html
+++ b/src/app/components/stepper/stepper.component.html
@@ -4,7 +4,7 @@
         <button type="button" (click)="prev()" *ngIf="showPrevButton">
             {{ buttonLabels.prev }}
         </button>
-        <button type="button" (click)="next()" *ngIf="showNextButton && !isErrorPage">
+        <button type="button" (click)="next()" *ngIf="showNextButton">
             {{ buttonLabels.next }}
         </button>
     </div>
