--- a/src/app/components/user-wizard/user-wizard.component.html
+++ b/src/app/components/user-wizard/user-wizard.component.html
@@ -1,13 +1,16 @@
 <div class="container">
     <div class="stepper-content">
         <fw-stepper (nextClick)="nextClick($event)" (winzardFinish)="winzardFinish()">
-            <fw-step [header]="'Hello There!'" [buttonLabels]="{next: 'Start'}">
+            <fw-step [buttonLabels]="{next: 'Start'}">
+                <ng-template stepHeader>Hello There!</ng-template>
                 <fw-welcome></fw-welcome>
             </fw-step>
-            <fw-step [header]="'User Details'" [errorChecker]="errorChecker">
+            <fw-step [errorChecker]="errorChecker">
+                <ng-template stepHeader>User Details'</ng-template>
                 <fw-user-details-form [userDetails]="userDetails"></fw-user-details-form>
             </fw-step>
-            <fw-step [header]="'Summary'" [buttonLabels]="{next: 'Buy'}">
+            <fw-step [buttonLabels]="{next: 'Buy'}">
+                <ng-template stepHeader>Summary</ng-template>
                 <fw-summary [userDetails]="userDetails"></fw-summary>
             </fw-step>
             <ng-template #error>
