1. Added directive path 2. Removed all hardCoded headers. 3. Step header and step error moved to directive.

--- a/src/app/components/user-wizard/user-wizard.component.html
+++ b/src/app/components/user-wizard/user-wizard.component.html
@@ -6,7 +6,7 @@
                 <fw-welcome></fw-welcome>
             </fw-step>
             <fw-step [errorChecker]="errorChecker">
-                <ng-template stepHeader>User Details'</ng-template>
+                <ng-template stepHeader>Tell us about yourself</ng-template>
                 <fw-user-details-form [userDetails]="userDetails"></fw-user-details-form>
             </fw-step>
             <fw-step [buttonLabels]="{next: 'Buy'}">
