1. Used StepErrorDirective instead of ng-template. 2.

--- a/src/app/components/user-wizard/user-wizard.component.html
+++ b/src/app/components/user-wizard/user-wizard.component.html
@@ -13,7 +13,8 @@
                 <ng-template stepHeader>Summary</ng-template>
                 <fw-summary [userDetails]="userDetails"></fw-summary>
             </fw-step>
-            <ng-template #error>
+            <ng-template fwErrorStep>
+                <ng-template stepHeader>Summary</ng-template>
                 <fw-error></fw-error>
             </ng-template>
         </fw-stepper>
