--- a/src/app/components/user-details-form/user-details-form.component.html
+++ b/src/app/components/user-details-form/user-details-form.component.html
@@ -1,26 +1,35 @@
 <div [formGroup]="userDetailsForm">
     <div class="form-control">
-        <label>
-            Name
-        </label>
+        <label>Name</label>
         <input type="text" formControlName="name" />
+        <div *ngIf="userDetailsForm.controls.name as name">
+            <ng-container *ngIf="name.touched && name?.errors?.['required']">
+                Name field is required
+            </ng-container>
+        </div>
     </div>
     <div class="form-control">
-        <label>
-            Age
-        </label>
+        <label>Age</label>
         <input type="number" formControlName="age" />
+        <div *ngIf="userDetailsForm.controls.age as age">
+            <ng-container *ngIf="age.touched && age?.errors?.['required']">
+                Age field is required
+            </ng-container>
+        </div>
     </div>
     <div class="form-control">
-        <label>
-            Where do you live
-        </label>
+        <label>Where do you live</label>
         <select formControlName="location">
             <option value="">Please select country</option>
             <option *ngFor="let location of locations" [value]="location.id">
                 {{ location.name }}
             </option>
         </select>
+        <div *ngIf="userDetailsForm.controls.location as location">
+            <ng-container *ngIf="location.touched && location?.errors?.['required']">
+                Location field is required
+            </ng-container>
+        </div>
     </div>
     <div class="form-control">
         <label *ngFor="let package of packages">
