1. Added image, 2. remove fit from tests. 3. CSS improved a bit.

--- a/src/app/components/stepper/stepper.component.scss
+++ b/src/app/components/stepper/stepper.component.scss
@@ -1,4 +1,9 @@
 .stepper-wrapper {
+    align-items: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    
     .step-header {
         font-size: 20px;
         font-weight: bold;
