--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,13 @@ html, body {
     padding-bottom: 10px;
 }
 
+.primary-btn {
+    background-color: #555555;
+    color: white;
+}
+
+.secondary-btn {
+    background-color: white;
+    color: black;
+}
 /* End: form controls CSS */
